force-app/main/default/objects/Pet__c/fields/Age_of_Pet__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Pet__c</fullName>
    <label>Age of Pet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>