force-app/main/default/objects/Pet__c/fields/Pet_Name__c.field-meta.xml
<CustomField>
    <fullName>Pet_Name__c</fullName>
    <label>Pet Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>