force-app/main/default/objects/Pet__c/fields/Pets_Tab_Status__c.field-meta.xml
<CustomField>
    <fullName>Pets_Tab_Status__c</fullName>
    <formula>AND(NOT(ISBLANK( Breed__c )),NOT(ISBLANK( Name )),NOT(ISBLANK( Type_of_Pet__c )),true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pets Tab Status</label>
    <type>Checkbox</type>
</CustomField>