force-app/main/default/objects/Pet__c/fields/Rabies_Certification_Date__c.field-meta.xml
<CustomField>
    <fullName>Rabies_Certification_Date__c</fullName>
    <label>Rabies Certification Date</label>
    <type>Date</type>
</CustomField>