force-app/main/default/objects/Pet__c/fields/Rabies_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Rabies_Expiration_Date__c</fullName>
    <label>Rabies Expiration Date</label>
    <type>Date</type>
</CustomField>