force-app/main/default/objects/Pet__c/fields/Tab_Status__c.field-meta.xml
<CustomField>
    <fullName>Tab_Status__c</fullName>
    <label>Tab Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Complete</fullName>
            </value>
            <value>
                <fullName>2. Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>