force-app/main/default/objects/Pet__c/fields/There_are_no_Pets_in_this_Household__c.field-meta.xml
<CustomField>
    <fullName>There_are_no_Pets_in_this_Household__c</fullName>
    <defaultValue>false</defaultValue>
    <label>There are no Pets in this Household</label>
    <type>Checkbox</type>
</CustomField>