force-app/main/default/objects/Pet__c/fields/Type_of_Pet__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Pet__c</fullName>
    <defaultValue>&apos;None&apos;</defaultValue>
    <label>Type of Pet</label>
    <length>100</length>
    <type>Text</type>
</CustomField>