force-app/main/default/objects/Pet__c/fields/Verified__c.field-meta.xml
<CustomField>
    <fullName>Verified__c</fullName>
    <formula>Type_of_Pet__c != null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Verified, If filled the type of pet.</inlineHelpText>
    <label>Verified(Filled type of pet)</label>
    <type>Checkbox</type>
</CustomField>