force-app/main/default/objects/Pet__c/validationRules/Type_of_pet_rquired.validationRule-meta.xml
<ValidationRule>
    <fullName>Type_of_pet_rquired</fullName>
    <active>true</active>
    <errorConditionFormula>AND(There_are_no_Pets_in_this_Household__c = true, ISBLANK( Type_of_Pet__c ) )</errorConditionFormula>
    <errorMessage>Required field Missing : Type of Pet</errorMessage>
</ValidationRule>